Add MovieManagementRepositoryTest with all Integration Tests
Closes: #1